[package]
name = "ao3rss"
version = "0.1.0"
authors = ["Kitlith <kitlith@kitl.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use-warp = ["warp"]
use-rocket = ["rocket"]

[dependencies]
futures-core = "0.3"
futures-util = "0.3"

hyper = "0.13"
tokio = { version = "*", features = ["macros"] }

warp = { version = "0.2", optional = true }
rocket = { version = "0.5.0-dev", optional = true, git = "https://github.com/SergioBenitez/Rocket" }

rss = "1.9"
select = "0.5"
reqwest = "0.10"
chrono = "0.4"
async-stream = "0.3"
