[package]
name = "ao3rss"
version = "0.1.0"
authors = ["Kitlith <kitlith@kitl.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
keepalive = []

[dependencies]
futures-core = "0.3"
futures-util = "0.3"

hyper = "0.13"
tokio = { version = "*", features = ["macros"] }

serde = { version = "1.0", features = ["derive"] }

rocket = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket" }

rss = "1.9"
select = "0.5"
reqwest = { version = "0.10", features = ["cookies", "json"] }
chrono = "0.4"
async-stream = "0.3"
